<resources>
    <string name="app_name">CryptoCalculator</string>
    <string name="bg_4">bg4</string>
    <string name="sub_title">
    <font color="#F2F3D9"><b> CLICK LOGIN</b></font>
    <br>
    If you already have an account.
    </br>
</string>
    <string name="email_log">Email</string>
    <string name="pass_log">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="createacc_title">Create an Account</string>
    <string name="register_sub_title">
    <font color="#FF3700B3"><b>CLICK REGISTER</b></font>
    <br>
        to get started with the app.
    </br>

</string>
    <string name="FULL_NAME">Enter your Name</string>
    <string name="signup_email">Enter your Email</string>
    <string name="Full_name">Type your Name</string>
    <string name="sign_email">Type your Email</string>
    <string name="log_in">LOG IN</string>
    <string name="signup">SIGNUP</string>
    <string name="btn_start">START</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="sign_name">Name</string>
    <string name="sign_email1">Email</string>
    <string name="retype_your_password">retype your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="home_loggedin">You are now Logged In</string>
    <string name="btn_logout">LOG OUT</string>
    <string name="forgot_pw">FORGOT PASSWORD?</string>
    <string name="phone_num">Enter phone number</string>
    <string name="type_your_phone_number">Phone number</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset">RESET</string>
    <string name="reset_your_password">RESET YOUR PASSWORD</string>

    <string name="back_to_log_in">
        Back to <font color="#0582ca"><b>Log in</b></font>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="required">Required</string>
    <string name="change_email">Change Email</string>


    <string name="terms"> <p>
    <b>For the purposes of these Terms and     Conditions: \n \n </b>
    ===================================== \n

   <br>*Application means the software program provided by the Company downloaded by You on any electronic device, named Coinalizer \n </br>
    <br>*Application Store means the digital distribution service operated and
    developed by Apple Inc. (Apple App Store) or Google Inc. (Google Play Store) in which the Application has been downloaded. \n </br>
  <br>*Affiliate means an entity that controls, is controlled by or is under
    common control with a party, where "control" means ownership of 50% or
      more of the shares, equity interest or other securities entitled to votefor election of directors or other managing authority. \n</br>
     <br>*Country refers to the Philippines \n </br>

    *Company (referred to as either the Company, We, Us or Our in this
    Agreement) refers to Keltech Company, Almar Zabarte Caloocan City. \n

  * Device means any device that can access the Service such as a computer, a
    cellphone or a digital tablet. \n
  * Service refers to the Application.
  * Terms and Conditions (also referred as Terms) mean these Terms and
    Conditions that form the entire agreement between You and the Company
    regarding the use of the Service. \n
  * Third-party Social Media Service means any services or content (including
    data, information, products or services) provided by a third-party that
    may be displayed, included or made available by the Service. \n
  * You means the individual accessing or using the Service, or the company,
    or other legal entity on behalf of which such individual is accessing or
    using the Service, as applicable. \n \n
                                 <b>Acknowledgment</b>  \n
 ===================================== \n
These are the Terms and Conditions governing the use of this Service and the
agreement that operates between You and the Company. These Terms and
Conditions set out the rights and obligations of all users regarding the use
of the Service.\n
Your access to and use of the Service is conditioned on Your acceptance of and
compliance with these Terms and Conditions. These Terms and Conditions apply
to all visitors, users and others who access or use the Service.\n
By accessing or using the Service You agree to be bound by these Terms and
Conditions. If You disagree with any part of these Terms and Conditions then
You may not access the Service. \n
You represent that you are over the age of 18. The Company does not permit
those under 18 to use the Service. \n
Your access to and use of the Service is also conditioned on Your acceptance
of and compliance with the Privacy Policy of the Company. Our Privacy Policy
describes Our policies and procedures on the collection, use and disclosure of
Your personal information when You use the Application or the Website and
tells You about Your privacy rights and how the law protects You. Please read
Our Privacy Policy carefully before using Our Service.\n \n
Links to Other Websites \n
    ===================================== \n
    Our Service may contain links to third-party web sites or services that are
not owned or controlled by the Company. \n

The Company has no control over, and assumes no responsibility for, the
content, privacy policies, or practices of any third party web sites or
services. You further acknowledge and agree that the Company shall not be
responsible or liable, directly or indirectly, for any damage or loss caused
or alleged to be caused by or in connection with the use of or reliance on any
such content, goods or services available on or through any such web sites or
services. \n
We strongly advise You to read the terms and conditions and privacy policies
of any third-party web sites or services that You visit. \n \n


Termination
 ===================================== \n

We may terminate or suspend Your access immediately, without prior notice or
liability, for any reason whatsoever, including without limitation if You
breach these Terms and Conditions. Upon termination, Your right to use the Service will cease immediately.

Limitation of Liability
 ===================================== \n

Notwithstanding any damages that You might incur, the entire liability of the
Company and any of its suppliers under any provision of this Terms and Your
exclusive remedy for all of the foregoing shall be limited to the amount
actually paid by You through the Service or 100 USD if You have not purchased
anything through the Service. To the maximum extent permitted by applicable law, in no event shall the
Company or its suppliers be liable for any special, incidental, indirect, or
consequential damages whatsoever (including, but not limited to, damages for
loss of profits, loss of data or other information, for business interruption,
for personal injury, loss of privacy arising out of or in any way related to
the use of or inability to use the Service, third-party software and/or third-
party hardware used with the Service, or otherwise in connection with any
provision of this Terms), even if the Company or any supplier has been advised
of the possibility of such damages and even if the remedy fails of its
essential purpose.Some states do not allow the exclusion of implied warranties or limitation of
liability for incidental or consequential damages, which means that some of
the above limitations may not apply. In these states, each parties liability
will be limited to the greatest extent permitted by law. \n \n
    Governing Law \n
 ===================================== \n
The laws of the Country, excluding its conflicts of law rules, shall govern this Terms and Your use of the Service. Your use of the Application may also be subject to other local, state, national, or international laws. \n \n

Disputes Resolution \n
 ===================================== \n
    If You have any concern or dispute about the Service, You agree to first try to resolve the dispute informally by contacting the Company. \n \n
    Severability and Waiver \n
===================================== \n

Severability \n
------------------------------------- \n

If any provision of these Terms is held to be unenforceable or invalid, such provision will be changed and interpreted to accomplish the objectives of such provision to the greatest extent possible under applicable law and the
remaining provisions will continue in full force and effect. \n

Waiver \n
------------------------------------- \n

Except as provided herein, the failure to exercise a right or to require performance of an obligation under these Terms shall not effect a parties
ability to exercise such right or require such performance at any time thereafter nor shall the waiver of a breach constitute a waiver of any
subsequent breach. \n\n

Translation Interpretation \n
========================== \n

These Terms and Conditions may have been translated if We have made them available to You on our Service. You agree that the original English text
shall prevail in the case of a dispute. \n\n

Changes to These Terms and Conditions \n
===================================== \n

We reserve the right, at Our sole discretion, to modify or replace these Terms at any time. If a revision is material We will make reasonable efforts to provide at least 30 days notice prior to any new terms taking effect. What
constitutes a material change will be determined at Our sole discretion. \n

By continuing to access or use Our Service after those revisions become effective, You agree to be bound by the revised terms. If You do not agree to
the new terms, in whole or in part, please stop using the website and the Service. \n \n

Contact Us \n
========================== \n
If you have any questions about these Terms and Conditions, You can contact
us: \n \n \n
  * By email: keltechcorp at gmail.com \n \n
  * By phone: number 09563955564

</p>
</string>


    <string name="next_1">Next</string>
    <string name="change_email1">change</string>
    <string name="forgot_email">FORGOT EMAIL?</string>
    <string name="logout">Logout</string>


    <string name="about_us">




    </string>
</resources>