<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DominantColor"
    android:padding="20dp"
    tools:context=".Signupactivity">

    <com.hbb20.CountryCodePicker
        android:id="@+id/phonepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="10dp"
        app:ccpDialog_backgroundColor="@color/white"
        app:ccpDialog_cornerRadius="30dp"
        app:ccpDialog_keyboardAutoPopup="false"
        app:ccp_arrowSize="16sp"
        app:ccp_autoDetectCountry="true"
        app:ccp_contentColor="@android:color/white"
        app:ccp_showArrow="true"
        app:ccp_showFlag="true"
        app:ccp_showFullName="false"
        app:ccp_showNameCode="false"
        app:ccp_showPhoneCode="true"
        app:ccp_textGravity="RIGHT" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phonenum1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="391dp"
        android:layout_height="56dp"
        android:layout_marginTop="300dp"
        android:hint="@string/type_your_phone_number"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/Beige"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:helperText="@string/required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextColor="@color/Beige"
        app:startIconTint="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="322dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_phonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="number"
            android:lines="1"
            android:textCursorDrawable="@null"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="322dp" />


    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/subtitle"
        style="@style/SubTitle"
        android:layout_width="376dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:fontFamily="@font/comfortaabold"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-8dp"
        tools:layout_editor_absoluteY="472dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="208dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:contentDescription="logoalways"
        android:src="@drawable/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-21dp"
        tools:layout_editor_absoluteY="-30dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="620dp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-black"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textColorLink="@color/Beige"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="518dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:hint="Full name(Surname, first, middle name)"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/Beige"
        app:hintTextColor="@color/Beige"
        app:startIconDrawable="@drawable/ic_account"
        app:startIconTint="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="322dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:textCursorDrawable="@null"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz ,"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:hint="@string/sign_email1"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/Beige"

        app:helperTextTextColor="@android:color/holo_red_light"
        app:hintTextColor="@color/Beige"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="322dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:textCursorDrawable="@null"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/log_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:hint="@string/pass_log"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/Beige"
        app:counterEnabled="false"
        app:counterMaxLength="16"
        app:hintTextColor="@color/Beige"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:startIconDrawable="@drawable/ic_circle_account"
        app:startIconTint="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="4dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword"
            android:lines="1"
            android:longClickable="false"
            android:textCursorDrawable="@null"
            tools:ignore="MissingConstraints" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/relog_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/Beige"
        app:hintTextColor="@color/Beige"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:startIconDrawable="@drawable/ic_circle_account"
        app:startIconTint="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_repass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            tools:ignore="MissingConstraints" />

    </com.google.android.material.textfield.TextInputLayout>


</RelativeLayout>